--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "normalize.css": "^8.0.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^3.2.0",
     "typeface-fira-sans": "0.0.54"
   },
   "scripts": {
